Fix crash on early re-size events

Triggered on Windows 11, Qt 6.8.x
No way to control what qt is doing so work arround the issue.

BUG:503508
FIXED-IN:1.12.3